# smart-sentry-sidecar

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.yaml
protos/: classifier.proto
src/: server.py
src/config/: __init__.py  loader.py
src/model/: classifier.py
tests/: client.py
